Hide everyone role in user card and prevent overflowing of role bubbles

--- a/webapp/titanembeds/static/css/embedstyle.css
+++ b/webapp/titanembeds/static/css/embedstyle.css
@@ -855,6 +855,7 @@ p.mentioned span.chatmessage {
   border: 1px solid;
   border-color: inherit;
   border-radius: 10px;
+  white-space: nowrap;
 }
 
 #usercard .role .text, #usercard .role .color {
